# guia-base

./: CMakeLists.txt  README.md
practicas/0-repaso/: repaso.c
practicas/0-repaso/tests/: test_01_donde_esta_el_punto.c  test_02_digito_en_numero.c  test_03_donde_esta_el_punto_bis.c  test_04_jugadores.c
practicas/1-recursividad/: CORRECCIONES.md  prueba1_entrada.txt  prueba1_salidaesperada.txt  prueba2_entrada.txt  recursividad.c  tp_ruta_mina.c
practicas/1-recursividad/tests/: test_capicua.c  test_divisible_por_7.c  test_explosion.c  test_fibonacci.c  test_mafia_china.c  test_onda_digital.c  test_palindromos.c  test_producto.c  test_tp_ruta_mina.c
